		  table.custom_copy() to avoid name clashes with luatools. Add 
		  string helpers, including string.parse_braces(). Update algorithms 
		  to work with these changes.
		- Allow vectors to have an origin vector, similar to the Position
		  class. Introduce new alternative table-based syntax for
		  Vector:set() that is much easier to read. Update unit tests
		  and algorithms. 

2011-05-02  Christian Feuersaenger <ludewich@users.sourceforge.net>

	- fpu: added support for log10 and log2

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- graphdrawing: 
	  - Drop the 'not yet positionedPGFGDINTERNAL' node name prefix
	    internally. It's stripped off now when nodes are passed over to
	  	Lua and its added back again when shipping the node out to TeX.
	  -	Drop the Node:shortname() method which is no longer needed.
	  - Improve coding style and documentation of the Interface, Sys, 
	    Node, Edge and Graph classes. 
	  - Rename Sys:logMessage() to Sys:log().
	  - Make parameter labels in the API docs not appear in bold.
		- Disable verbose logging by default.
		- Add methods Edge:getNodes() and Node:getEdges().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- graphdrawing: 
	  - Initial work on spring-electrical and layered drawing algorithms.
		- Major rework of the Lua code of the graphdrawing library: added
		  a Vector class for improved math operations and node positioning,
			added quite a number of table and iterator helpers, added
			post-processing code for fixing the orientation of graph drawings,
			updated the graph/node/edge data structures to store nodes in the order
			they appear instead of storing them in a random order, implement
			coordinate keys for nodes, implement 

2011-04-30  Christian Feuersaenger <ludewich@users.sourceforge.net>

	- number printing: added '1000 sep in fractionals' switch

2011-04-29 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Work on pgflibraryluamath (added pgfpointnormalised)
