@@ -13,6 +13,9 @@
 		  class. Introduce new alternative table-based syntax for
 		  Vector:set() that is much easier to read. Update unit tests
 		  and algorithms. 
+		- Fix Walshaw algorithm to properly set the subnodes when copying
+		  the coarse graphs. Simplify the code that updates the node
+		  coordinates.
 
 2011-05-02  Christian Feuersaenger <ludewich@users.sourceforge.net>
 
